tests/negative/gold/prefixed_assign5_test.gold
tests/negative/prefixed_assign5_test.toit:8:6: error: No setter method 'some-method=' found.
  pa.some_method = 3
     ^~~~~~~~~~~
Compilation failed.
